[package]
name = "intergalactic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
hyper = "0.14.25"
jsonrpsee = { version = "0.16.2", features = ["full"] }
lazy_static = "1.4.0"
serde = "1.0.159"
serde_json = "1.0.95"
tokio = { version = "1.27.0", features = ["macros", "signal"] }
tower = "0.4.13"
tracing = "0.1.37"
tracing-subscriber = { version= "0.3.16", features = ["env-filter"] }
